[package]
authors = ["Kaffetorsk <93540369+kaffetorsk@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "nrf9160-hello"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
nrf9160-hal = { version = "0.16.0", features=["rt"]}
# panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features=["cortex-m"]}
embedded-hal = { version = "0.2.3", features=["unproven"]}
nb = "1.0.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
