[package]
authors = ["Kaffetorsk <93540369+kaffetorsk@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "nrf9160-hello"
version = "0.1.0"

[features]
default = ["nightly"]
nightly = ["embassy-executor/nightly", "embassy-nrf/nightly", "embassy-net/nightly", "embassy-nrf/unstable-traits", "embassy-usb", "embedded-io/async", "embassy-net"]

[dependencies]
nrf-modem = "0.2.0"
tinyrlibc = { git = "https://github.com/rust-embedded-community/tinyrlibc", version = "0.3.0" }
arrayvec = {version = "0.7.2", default-features = false}
embassy-futures = "0.1.0"
embassy-sync = { version = "0.1.0", features = [
    "defmt",
] }
embassy-executor = { version = "0.1.0", git="https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.1.0", git="https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "nrf9160-ns",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
] }
embassy-net = { version = "0.1.0", git="https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
], optional = true }
embassy-usb = { version = "0.1.0", git="https://github.com/embassy-rs/embassy", features = [
    "defmt",
], optional = true }
embedded-io = "0.4.0"

defmt = "0.3"
defmt-rtt = "0.4"

static_cell = "1.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
# panic-probe = { version = "0.2", features = ["print-rtt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
rand = { version = "0.8.4", default-features = false }
embedded-storage = "0.3.0"
usbd-hid = "0.6.0"
serde = { version = "1.0.136", default-features = false }


# Cargo.toml
[profile.dev]
debug = 1 # default is `true`; not needed if not already overridden

[profile.release]
debug = 1 # default is `false`; using `true` is also OK as symbols reside on the host, not the target
# codegen-units = 1 # better optimizations
# lto = true # better optimizations
